# mini-senior2

./: .gitignore  README.md  pyproject.toml  requirements.txt
mini_senior2/: __init__.py
mini_senior2.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mini_senior2/configs/: data_config.yaml  paths.yaml
mini_senior2/data/: __init__.py  loader.py  merge_labels.py  paths.py
mini_senior2/models/: __init__.py  text_llm.py  vit_prompt.py
mini_senior2/training/: __init__.py  fuse.py  infer_vit.py  run_text.py  train_vit.py
mini_senior2/utils/: cfg.py  config_loader.py
scripts/prepare_data/mini_senior2_prep/: build_manifests.py  config.py  download_images.py  io_utils.py  manifests.py  ocr_images.py  reddit_image_resolver.py  reports.py  resize_images.py
scripts/prepare_data/mini_senior2_prep/_deprecated/: enrich_manifests.py
